--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "parcel-plugin-handlebars": "^0.4.4",
     "templates": "^1.2.9"
   }
